2012-03-20  Nick Alcock  <nick.alcock@oracle.com>

	Changes for easier stress-testing.

	* GNUmakefile (check): Reformulate in terms of check-verbose.
	(check-installed): Reformulate in terms of check-installed-verbose.
	(check-verbose): Pass in RUNTESTFLAGS.
	(check-installed-verbose): Likewise.
	(check-*-stress): New targets for testing in parallel with stress
	tests: skips stressful tests that allocate a lot of memory.

	* runtest.sh: New --testsuites= option, constraining test execution
	to specific subdirectories of test/.

	* test/{act,buf,builtin,dt_test,dtrace,fbt,intro,io,ip,lockstate,out,
	proc,profile,sched,script,sdt,spec,struct,sysinfo}/*: Move under
	test/demo.
	* test/{dif,regression}/*: Move under test/unittest.
	* test/unittest/buffering/*.resize*: Move under stress/buffering.
	* test/{demo,unittest,stress}/README: New, describe these testsuites.

2012-03-19  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec: Call ldconfig when necessary.
	* GNUmakefile: Trunk version number.

2012-03-13  Nick Alcock  <nick.alcock@oracle.com>

	* NEWS: Mention shared library support.
	* GNUmakefile: This is v0.2.5.
	* dtrace-utils.spec: Likewise.

2012-03-07  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (install): Install a usable libdtrace.a and dtrace.h.
	* dtrace-utils.spec (%files): Adjusted.
	* README.build-system: Mention the lack of automated install targets.

2012-02-15  Nick Alcock  <nick.alcock@oracle.com>

	* NEWS: New, mention changes.
	* Build: Install it.

	* README: Updated.
	* GNUmakefile: This is v0.2.4.
	* dtrace-utils.spec: Likewise.

2012-02-09  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Detect failures due to out-of-memory conditions, and
	turn them into relatively easy-to-ignore XFAILs.

	* dtrace-utils.spec: Release.

2012-03-10  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build: Overwrite already-existing stale shared-
	library symlinks.
	* dtrace-utils.spec: We have a .so now, not a .a.
